[metadata]
    name=dash_flask_login
    version=__version__ # noqa: F821
    author=Jeroen de Vries
    author_email=jeroendevries@runbox.eu
    description=Integration of Dash with Flask-Login
    long_description= file: README.md
    url = https://github.com/Jeroendevr/dash-flask-login
    classifiers =
        Intended Audience :: Developers
        Topic :: Utilities
        Natural Language :: English
        Operating System :: OS Independent
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3

[options]
    package_dir = 
        = dash_flask_login
    packages = find:
    python_requires = =>3.9
    
[options.packages.find]
    where = dash_flask_login