[metadata]
name=dash_flask_login
version=__version__ 
author=Jeroen de Vries, gaw89
description=Integration of Dash with Flask-Login
long_description= file: README.md
url = https://github.com/gaw89/dash-flask-login
classifiers =
    Intended Audience :: Developers
    Topic :: Utilities
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir = dash_flask_login
packages = find:
python_requires = >=3.9

[options.packages.find]
where = dash_flask_login